viet htaccess, hoan thien mot phan giao dien chinh va trang con

--- a/3.Project/assets/css/footer.css
+++ b/3.Project/assets/css/footer.css
@@ -50,7 +50,7 @@
     color: white;
 }
 
-#myFooter .footer-copyright {
+.footer-copyright {
     background-color: #383737;
     padding-top: 3px;
     padding-bottom: 3px;
